crates/citadel-client-ffi/include/citadel_client.h

/**
 * Stable ABI version. Bump on any breaking change to the C surface.
 */
#define CITADEL_FFI_ABI_VERSION 3
/**
 * Status codes returned by the C ABI. Stable, `#[repr(C)]`.
 */
typedef enum {
    /**
     * Operation succeeded (and, for poll, an envelope was written).
     */
    CITADEL_STATUS_OK = 0,
    /**
     * Non-fatal: nothing was available to poll right now; try again later.
     */
    CITADEL_STATUS_AGAIN = 1,
    /**
     * The connection is closed; no more envelopes will arrive.
     */
    CITADEL_STATUS_DISCONNECTED = 2,
    /**
     * A pointer was null or an argument was invalid.
     */
    CITADEL_STATUS_INVALID_ARGUMENT = 3,
    /**
     * Connecting or handshaking failed.
     */
    CITADEL_STATUS_CONNECT = 4,
    /**
     * Sending failed.
     */
    CITADEL_STATUS_SEND = 5,
    /**
     * Receiving/decoding failed.
     */
    CITADEL_STATUS_RECEIVE = 6,
    /**
     * An unexpected internal error (including a caught panic).
     */
    CITADEL_STATUS_INTERNAL = 7,
} CitadelStatus;
/**
 * Realtime auth outcome status returned by [`citadel_client_authenticate`].
 *
 * Values mirror the wire-level `AUTH_STATUS_*` constants exactly so engine
 * bindings can compare them with their generated/declaration-checked protocol
 * constants.
 */
typedef enum {
    /**
     * The token validated and `user_buf` contains the resolved user id.
     */
    CITADEL_AUTH_STATUS_AUTHENTICATED = 0,
    /**
     * The connection was admitted as an anonymous guest.
     */
    CITADEL_AUTH_STATUS_GUEST = 1,
    /**
     * The server refused the handshake; `out_reason` contains an `AUTH_REASON_*`.
     */
    CITADEL_AUTH_STATUS_REJECTED = 2,
} CitadelAuthStatus;
/**
 * The opaque client handle exposed to C as `CitadelClient *`.
 */
typedef struct CitadelClient CitadelClient;
/**
 * Opaque shared transform runtime handle exposed as `CitadelTransformView *`.
 */
typedef struct CitadelTransformView CitadelTransformView;
/**
 * A transform returned by the shared runtime, in Citadel world units (cm).
 */
typedef struct {
    /**
     * Position `[x, y, z]`.
     */
    float position[3];
    /**
     * Quaternion `[x, y, z, w]`.
     */
    float rotation[4];
    /**
     * Linear velocity `[x, y, z]`.
     */
    float velocity[3];
} CitadelTransformState;
/**
 * Return the ABI version this library was built with.
 */
uint32_t citadel_client_abi_version(void);
/**
 * Connect to a Citadel QUIC endpoint.
 *
 * `addr` and `server_name` are NUL-terminated C strings. `insecure = false`
 * verifies a CA-issued certificate and hostname with public CA roots;
 * `insecure = true` is only for a local development self-signed certificate.
 * On success, writes a heap-allocated handle to `*out_handle`; the
 * caller owns it and must call [`citadel_client_free`].
 *
 * # Safety
 * `addr` and `server_name` must be valid NUL-terminated C strings.
 * `out_handle` must be a valid, writable `*mut *mut CitadelClient`.
 */
CitadelStatus citadel_client_connect_quic(const char *addr,
                                          const char *server_name,
                                          bool insecure,
                                          CitadelClient **out_handle);
/**
 * Connect to a Citadel WebSocket endpoint (e.g. `ws://127.0.0.1:7352/`).
 *
 * # Safety
 * `url` must be a valid NUL-terminated C string. `out_handle` must be a valid,
 * writable `*mut *mut CitadelClient`.
 */
CitadelStatus citadel_client_connect_websocket(const char *url, CitadelClient **out_handle);
/**
 * Send an envelope. `reliable` chooses a reliable stream vs an unreliable
 * datagram on QUIC; WebSocket is always reliable. The `data`/`len` bytes are
 * copied; the caller keeps ownership of its buffer.
 *
 * # Safety
 * `handle` must be a valid pointer returned by a `connect` function and not yet
 * freed. `data` must point to at least `len` readable bytes (or be null iff
 * `len == 0`).
 */
CitadelStatus citadel_client_send(CitadelClient *handle,
                                  uint16_t kind,
                                  const uint8_t *data,
                                  uintptr_t len,
                                  bool reliable);
/**
 * Perform the realtime auth handshake as the next frame on a freshly connected
 * transport.
 *
 * `token`/`len` is copied into a `KIND_AUTH` body; pass null + 0 for an explicit
 * guest session. On [`CitadelStatus::Ok`], `*out_status` is set to the resolved
 * auth status. For authenticated sessions, the user id is copied into
 * `user_buf` as a NUL-terminated UTF-8 string when `user_cap > 0`; `*out_user_len`
 * receives the full user-id length even when truncated. For rejected sessions,
 * `*out_reason` receives the coarse `AUTH_REASON_*` class.
 *
 * # Safety
 * `handle` must be a valid pointer returned by a `connect` function and not yet
 * freed. `token` must point to at least `len` readable bytes (or be null iff
 * `len == 0`). `out_status`, `out_user_len`, and `out_reason` must be writable.
 * `user_buf` must point to at least `user_cap` writable bytes (or be null iff
 * `user_cap == 0`).
 */
CitadelStatus citadel_client_authenticate(CitadelClient *handle,
                                          const uint8_t *token,
                                          uintptr_t len,
                                          CitadelAuthStatus *out_status,
                                          char *user_buf,
                                          uintptr_t user_cap,
                                          uintptr_t *out_user_len,
                                          uint8_t *out_reason);
/**
 * Poll for the next inbound envelope (non-blocking).
 *
 * On [`CitadelStatus::Ok`], writes the envelope kind to `*out_kind`, copies the
 * payload into the caller's `buf` (capacity `cap`), writes the payload length to
 * `*out_len`, and sets `*out_truncated` to true if the payload did not fit
 * (in which case only `cap` bytes were written). Returns [`CitadelStatus::Again`]
 * if nothing is ready, or [`CitadelStatus::Disconnected`] if the connection
 * closed and the queue is drained.
 *
 * # Safety
 * `handle` must be a live handle. `out_kind`, `out_len`, and `out_truncated`
 * must be valid writable pointers. `buf` must point to at least `cap` writable
 * bytes (or be null iff `cap == 0`).
 */
CitadelStatus citadel_client_poll(CitadelClient *handle,
                                  uint16_t *out_kind,
                                  uint8_t *buf,
                                  uintptr_t cap,
                                  uintptr_t *out_len,
                                  bool *out_truncated);
/**
 * Copy the last error message for `handle` into `buf` as a NUL-terminated
 * string (truncated to `cap`). Returns the number of bytes written including
 * the NUL, or 0 on invalid arguments.
 *
 * # Safety
 * `handle` must be a live handle. `buf` must point to at least `cap` writable
 * bytes (or be null iff `cap == 0`).
 */
uintptr_t citadel_client_last_error(CitadelClient *handle, char *buf, uintptr_t cap);
/**
 * Free a client handle. After this call the pointer is invalid and must not be
 * used again. Passing null is a no-op.
 *
 * # Safety
 * `handle` must be a pointer returned by a `connect` function that has not
 * already been freed, or null.
 */
void citadel_client_free(CitadelClient *handle);
/**
 * Build a transform runtime from the reliable `KIND_TSYNC_HELLO` body.
 *
 * # Safety
 * `hello_body` must reference `hello_len` readable bytes (or be null only when
 * `hello_len == 0`), and `out_view` must be a writable pointer.
 */
CitadelStatus citadel_transform_view_new(const uint8_t *hello_body,
                                         uintptr_t hello_len,
                                         CitadelTransformView **out_view);
/**
 * Decode and apply one `KIND_TSYNC_SNAPSHOT` body. `out_applied` reports false
 * for malformed, stale, or missing-base snapshots; those are normal datagram
 * conditions, not transport errors.
 *
 * # Safety
 * `view` must be live, `body` must reference `body_len` readable bytes (or be
 * null when zero), and `out_applied` must be writable.
 */
CitadelStatus citadel_transform_view_apply_datagram(CitadelTransformView *view,
                                                    const uint8_t *body,
                                                    uintptr_t body_len,
                                                    bool *out_applied);
/**
 * Return the runtime's current adaptive-buffer sample for an object.
 *
 * # Safety
 * `view` must be live and `out_state`/`out_found` must be writable.
 */
CitadelStatus citadel_transform_view_sample_now(CitadelTransformView *view,
                                                uint32_t object_id,
                                                CitadelTransformState *out_state,
                                                bool *out_found);
/**
 * Return an owned object's present authoritative state and highest contiguous
 * input acknowledgement, the required reconciliation target.
 *
 * # Safety
 * `view` must be live and all output pointers must be writable.
 */
CitadelStatus citadel_transform_view_authoritative_state(CitadelTransformView *view,
                                                         uint32_t object_id,
                                                         CitadelTransformState *out_state,
                                                         uint32_t *out_input_seq,
                                                         bool *out_found);
/**
 * Encode the snapshot acknowledgement into `out_ack[0..8]`.
 *
 * # Safety
 * `view` must be live and `out_ack` must reference at least eight writable bytes.
 */
CitadelStatus citadel_transform_view_ack(CitadelTransformView *view, uint8_t *out_ack);
/**
 * Encode one sequenced owner-input frame as `KIND_TSYNC_INPUT`'s body. Engine
 * components retain and resend recent frames as their own bounded redundancy
 * ring; this function keeps the wire layout itself in Rust.
 *
 * # Safety
 * `out`, `out_len`, and `out_truncated` must be writable. `out` may be null
 * only when `cap == 0`.
 */
CitadelStatus citadel_transform_encode_input(uint32_t input_seq,
                                             uint32_t sim_tick,
                                             float dt,
                                             uint32_t object_id,
                                             uint32_t ownership_epoch,
                                             float velocity_x,
                                             float velocity_y,
                                             float velocity_z,
                                             uint8_t *out,
                                             uintptr_t cap,
                                             uintptr_t *out_len,
                                             bool *out_truncated);
/**
 * Free a transform runtime handle. Passing null is a no-op.
 *
 * # Safety
 * `view` must be a live handle returned by citadel_transform_view_new or null.
 */
void citadel_transform_view_free(CitadelTransformView *view);